--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anniversarywebsite",
+  "name": "DK-Shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.452.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/babel__traverse": "^7.20.6",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
