--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,6 +20,7 @@
         "./src/*"
       ]
     },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
 
     /* Linting */
     "strict": true,
